welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:23: error: not found: value ecritmessage
  ecritmessage(48)
  ^